# qspec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: static.yml
doc/source/: conf.py  index.rst  modules.rst  pycol.models.rst  pycol.rst  qspec.rst
doc/source/_templates/: layout.html
doc/uml/: simulate.puml
docs/: index.html
docs/source/: index.rst
docs/source/_static/css/: borders.css
docs/source/_static/meta/: meta.html
docs/uml/: models.puml
examples/: analyze_ex.py  models_ex.py  models_gui_ex.py  physics_ex.py  simulate_ex.py  stats_ex.py
pycol/: __init__.py  _simulate.py  _types.py  algebra.py  analyze.py  lineshapes.py  physics.py  simulate.py  stats.py  tools.py  types.py
pycol/_cpp/: __init__.py  _cpp.py
pycol/_cpp/src/pycol_cpp/: Physics.h  README.md  wignerSymbols-cpp.cpp
pycol/_lineshapes/: base.py  convolved.py  spectrum.py  splitter.py
pycol/cpp/: cpp.py
pycol/cpp/src/pycol_simulate/: Interaction.cpp  Interaction.h  Light.cpp  Light.h  Matter.cpp  Matter.h  Physics.cpp  Physics.h  Results.cpp  Results.h  Utility.cpp  Utility.h  dllmain.cpp  readme.txt
pycol/models/: __init__.py  _base.py  _convolved.py  _fit.py  _helper.py  _spectrum.py  _splitter.py  base.py  convolved.py  fit.py  helper.py  spectrum.py  splitter.py
pycol/simulate/: __init__.py  _simulate.py  _simulate_cpp.py
qspec/: __init__.py  _types.py  algebra.py  analyze.py  analyze_cpp.py  physics.py  stats.py  tools.py
qspec/_cpp/: __init__.py  _cpp.py
qspec/_cpp/src/qspec_cpp/: Interaction.cpp  Interaction.h  King.cpp  King.h  Light.cpp  Light.h  Matter.cpp  Matter.h  Physics.cpp  README.md  Utility.cpp  Utility.h  dllmain.cpp
qspec/analyze/: __init__.py  _analyze.py  _analyze_cpp.py
qspec/models/: __init__.py  _base.py  _convolved.py  _fit.py  _helper.py  _spectrum.py  _splitter.py
qspec/models/_gui/: __init__.py  _main.py
qspec/models/_gui/_core/: __init__.py  _core.py  _data.py  _db.py  _plot.py  default.sqlite
qspec/models/_gui/_ui/: Ui_hfsConfig.py  Ui_hfsConfig.ui  Ui_main.py  Ui_main.ui  __init__.py  _hfsConfigUi.py  _mainUi.py
qspec/simulate/: __init__.py  _simulate.py  _simulate_cpp.py
tests/pycol_test/: algebra_tests.py  lineshapes_tests.py  models_tests.py  physics_tests.py  simulate_test.py  simulate_tests.py
tests/qspec_test/: algebra_tests.py  models_tests.py  physics_tests.py  simulate_test.py
