[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 61.2',
    'wheel',
]

[project]
name = 'qspec'
version = '0.2.0'
description = 'A python package for calculations surrounding laser spectroscopy.'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
keywords = ['physics', 'laser spectroscopy', 'simulation', 'quantum mechanics', 'data analysis']
authors = [
    {name = 'Patrick Mueller', email = 'pamueller@ikp.tu-darmstadt.de'},
]
maintainers = [
  {name = 'Patrick Mueller', email = 'pamueller@ikp.tu-darmstadt.de'}
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows'
]
dependencies = [
    'numpy >= 1.20.3',
    'scipy >= 1.10.1',
    'sympy',
    'matplotlib'
]

[project.urls]
homepage = 'https://www.ikp.tu-darmstadt.de/forschung_kernphysik/gruppen_kernphysik/experiment/ag_w_noertershaeuser/index.en.jsp'
source = 'https://github.com/lasersphere/qspec'
download = 'https://pypi.org/project/qspec/#files'
tracker = 'https://github.com/lasersphere/qspec/issues'

[tool.setuptools.package-data]
'*' = ['*.dll']
