[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 61.2',
    'wheel',
]

[project]
name = 'qspec'
version = '0.3.4'
description = 'Physics toolbox for laser spectroscopy'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
keywords = ['physics', 'laser spectroscopy', 'simulation', 'quantum mechanics', 'data analysis']
authors = [
    {name = 'Patrick Mueller', email = 'pmueller@physics.ucla.edu'},
]
maintainers = [
  {name = 'Patrick Mueller', email = 'pmueller@physics.ucla.edu'}
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    'matplotlib',
    'numpy >= 1.20.3',
    'scipy >= 1.10.1',
    'sympy'
]

[project.urls]
source = 'https://github.com/patmlr/qspec'
download = 'https://pypi.org/project/qspec/#files'
tracker = 'https://github.com/patmlr/qspec/issues'

[tool.setuptools.package-data]
'*' = ['*.dll']
