[metadata]
name = pycol
version = 0.0.1
author = Patrick Matthias Mueller
author_email = author@example.com #
description = A small example package #
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject #
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues #
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
* = *.dll

[options.packages.find]
where =
