[metadata]
name = pycol
version = 0.0.1
author = Patrick Matthias Mueller
author_email = pamueller@ikp.tu-darmstadt.de
description = A python package for calculations surrounding Collinear Laser Spectroscopy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patmlr/pycol
project_urls =
    Bug Tracker = https://github.com/patmlr/pycol/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.20.0
    scipy
    sympy
    matplotlib

[options.package_data]
* = *.dll

[options.packages.find]
where =
